# solid-tauri-looper

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: api.rs
src-tauri/src/app/: app_controller.rs  mod.rs  runtime.rs  system_info.rs
src-tauri/src/audio/: audio_graph.rs  audio_sample.rs  metronome.rs  mixer.rs  mod.rs  playable.rs  sampler.rs  stream.rs  track.rs
src/core/app-state/: app.context.model.ts  app.context.tsx
src/features/player/: player.tsx
src/features/player/components/audio-visualization/: audio-visualization.tsx
src/features/player/components/clock/: clock.tsx
src/features/player/components/ticker/: ticker.tsx
src/features/player/components/track/: track.model.ts  track.tsx
src/shared/ui/: lighting.tsx
src/shared/ui/header/: header.tsx
src/shared/ui/knob/: knob.tsx
src/shared/ui/lighting/: lighting.tsx
src/shared/ui/slider/: slider.tsx
src/shared/ui/theme/: themePicker.tsx  themes.ts
src/shared/ui/toolbar/: Toolbar.tsx
