[package]
name = "solid-tauri-looper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "solid_tauri_looper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release-with-logs]
inherits = "release"
debug = true
opt-level = 3
lto = true

[profile.release]
panic = "abort" 
codegen-units = 1 
lto = "fat"
opt-level = 3 
strip = true 
target-cpu="native"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fundsp = "0.20.0"
crossbeam-channel = "0.5.13"
cpal = "0.15.3"
ringbuf = "0.4.7"
hound = "3.5.1"
atomic_enum = "0.3.0"
rand = "0.8.5"
sysinfo = "0.32.0"

